--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./style.css">
-    
+  
 </head>
 <body>
 
@@ -33,9 +33,11 @@
         </nav>
     </header>
     <main>
-      <section class="container" >
-<img id="banner" src="./assents/banner.png" alt="">
+      <section class="container section-banner" >
 
+        <div class="banner">
+
+        </div>
 
       </section>
     </main>
