--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./style.css">
-  
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
 
@@ -30,13 +30,21 @@
                 <a href="#">Contato</a>
               </li>
             </ul>
+
+            <div class="caixa-icones" >
+              <i class="bi bi-bag-check-fill"></i>
+              <i class="bi bi-person-fill"></i>
+            </div>
         </nav>
     </header>
     <main>
       <section class="container section-banner" >
 
-        <div class="banner">
-
+        <div class="banner">  <!--Imagem do Nosso banner --> 
+            <p>
+              Explore o melhor em games e acessórios com TechGame Zone!
+            </p>
+            <button>Veja Mais</button> <!--A tag button serve para criar-->
         </div>
 
       </section>
