--- a/index.html
+++ b/index.html
@@ -41,10 +41,14 @@
       <section class="container section-banner" >
 
         <div class="banner">  <!--Imagem do Nosso banner --> 
-            <p>
+          <div class="banner-estrutura">
+            <p class="texto-banner">
               Explore o melhor em games e acessórios com TechGame Zone!
             </p>
-            <button>Veja Mais</button> <!--A tag button serve para criar-->
+            <button class="btn">Veja mais</button> <!--A tag button serve para criar-->
+          </div>  
+          
+          
         </div>
 
       </section>
