--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </nav>
     </header>
     <main>
-      <section class="container section-banner" >
+      <section class="section-banner" >
 
         <div class="banner">  <!--Imagem do Nosso banner --> 
           <div class="banner-estrutura">
