--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
           </p>
         </div>
         <div class="carousel">
+          <!-- Card de produtos -->
           <div class="card">
             <div class="card-img">
               <img src="./assents/p1.png" alt="" class="produtos">
@@ -73,6 +74,38 @@
 
             </div>
           </div>
+          <div class="card">
+            <div class="card-img">
+              <img src="./assents/p2.png" alt="" class="produtos">
+            </div>
+            <div class="card-texto">
+              <p class="valor">$170,00</p>
+              <div class="caixa-cores">
+                <div class="cores rosa"></div>
+                <div class="cores laranja"></div>
+                <div class="cores branco"></div>
+              </div>
+
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-img">
+              <img src="./assents/p3.png" alt="" class="produtos">
+            </div>
+            <div class="card-texto">
+              <p class="valor">$2.800,00</p>
+              <div class="caixa-cores">
+                <div class="cores vermelho"></div>
+                <div class="cores verde"></div>
+                <div class="cores rosa"></div>
+              </div>
+
+            </div>
+          </div>
+
+
+
+
         </div> 
 
       </section>
