--- a/index.html
+++ b/index.html
@@ -102,14 +102,14 @@
 
             </div>
           </div>
-
-
-
-
         </div> 
-
       </section>
+      <section class="section-banner">
 
+        <div class="banner-xbox">
+          <p class="texto-xbox">Xbox Series S saindo de linha?</p>
+        </div>
+      </section>
     </main>
     <footer> 
 
