--- a/index.html
+++ b/index.html
@@ -106,8 +106,12 @@
       </section>
       <section class="section-banner">
 
-        <div class="banner-xbox">
-          <p class="texto-xbox">Xbox Series S saindo de linha?</p>
+        <div class="banner-xbox"> <!-- foto --> 
+          <div class="xbox-caixa">
+            <p class="texto-xbox">Xbox Series S saindo de linha?</p>
+          <button class="btn">Saiba mais</button>
+          </div>
+          
         </div>
       </section>
     </main>
